--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <div class="logo">
                 <a href="#"><span>A</span>tlas</a>
             </div>
+            <div class="nav-toggle">
+                <span></span>
+            </div>
             <ul class="nav">
                 <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fa fa-user"></i>About</a></li>
@@ -30,7 +33,19 @@
          <div class="main-content">
             <!-- Home Section Start -->
             <section class="home section">
-                Home
+                <div class="container">
+                    <div class="row">
+                        <div class="home-info padd-15">
+                            <h3 class="hello">Hello, my name is <span>Joshua John</span></h3>
+                            <h3 class="my-profession">I'm a <span class="typing">Full Stack Developer</span></h3>
+                            <p>I am a passionate Full Stack Developer with a strong background in both front-end and back-end development. With extensive experience in creating dynamic, user-friendly web applications, I specialize in translating complex requirements into functional, high-performance software solutions.</p>
+                            <a href="#contact" class="btn hire-me">More About Me</a>
+                        </div>
+                        <div class="home-img padd-15">
+                            <img src="images/Covenant.jpg" alt="friend">
+                        </div>
+                    </div>
+                </div>
             </section>
             <!-- Home Section Start -->
          </div>
