--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Main Content Start -->
          <div class="main-content">
             <!-- Home Section Start -->
-            <section class="home section">
+            <section class="home section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -48,6 +48,17 @@
                 </div>
             </section>
             <!-- Home Section Start -->
+            <!-- About Section Start -->
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Home Section End -->
          </div>
         <!-- Main Content End -->
      </div>
