--- a/index.html
+++ b/index.html
@@ -52,8 +52,18 @@
             <section class="about section">
                 <div class="container">
                     <div class="row">
-                        <div class="section-title">
+                        <div class="section-title padd-15">
                             <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text">
+                                    <h3>I'm Joshua John and <span>Full Stack Developer</span></h3>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem ex fugiat maxime doloribus harum porro provident iure commodi modi rerum, consequatur cumque dolor tenetur reiciendis adipisci optio placeat cum earum unde facilis dolore est expedita ducimus aliquam. Non nostrum veniam ipsa cum accusamus? Aut maiores excepturi quam saepe voluptates quos illum quod? Fugit, hic saepe.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
