--- a/index.html
+++ b/index.html
@@ -59,10 +59,35 @@
                     <div class="row">
                         <div class="about-content padd-15">
                             <div class="row">
-                                <div class="about-text">
+                                <div class="about-text padd-15">
                                     <h3>I'm Joshua John and <span>Full Stack Developer</span></h3>
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem ex fugiat maxime doloribus harum porro provident iure commodi modi rerum, consequatur cumque dolor tenetur reiciendis adipisci optio placeat cum earum unde facilis dolore est expedita ducimus aliquam. Non nostrum veniam ipsa cum accusamus? Aut maiores excepturi quam saepe voluptates quos illum quod? Fugit, hic saepe.</p>
                                 </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item">
+                                            <p>Birthday : <span>17 Oct 2006</span></p>
+                                        </div>
+                                        <div class="info-item">
+                                            <p>Age : <span>18</span></p>
+                                        </div>
+                                        <div class="info-item">
+                                            <p>Website : <span>www.domian.com</span></p>
+                                        </div>
+                                        <div class="info-item">
+                                            <p>Email : <span>joshuabaridakarajohn@gmail.com</span></p>
+                                        </div>
+                                        <div class="info-item">
+                                            <p>Degree : <span>B.sc Medicine</span></p>
+                                        </div>
+                                        <div class="info-item">
+                                            <p>Phone : <span>+234 9110105078</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">Skills</div>
                             </div>
                         </div>
                     </div>
