--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                                         <div class="info-item">
                                             <p>Phone : <span>+234 9110105078</span></p>
                                         </div>
+                                        <div class="info-item">
+                                            <p>City : <span>Port Harcourt</span></p>
+                                        </div>
+                                        <div class="info-item">
+                                            <p>Freelance : <span>Available</span></p>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="skills padd-15">Skills</div>
