--- a/index.html
+++ b/index.html
@@ -67,33 +67,77 @@
                             <div class="row">
                                 <div class="personal-info padd-15">
                                     <div class="row">
-                                        <div class="info-item">
+                                        <div class="info-item padd-15">
                                             <p>Birthday : <span>17 Oct 2006</span></p>
                                         </div>
-                                        <div class="info-item">
+                                        <div class="info-item padd-15">
                                             <p>Age : <span>18</span></p>
                                         </div>
-                                        <div class="info-item">
+                                        <div class="info-item padd-15">
                                             <p>Website : <span>www.domian.com</span></p>
                                         </div>
-                                        <div class="info-item">
-                                            <p>Email : <span>joshuabaridakarajohn@gmail.com</span></p>
+                                        <div class="info-item padd-15">
+                                            <p>Email : <span>info@gmail.com</span></p>
                                         </div>
-                                        <div class="info-item">
+                                        <div class="info-item padd-15">
                                             <p>Degree : <span>B.sc Medicine</span></p>
                                         </div>
-                                        <div class="info-item">
+                                        <div class="info-item padd-15">
                                             <p>Phone : <span>+234 9110105078</span></p>
                                         </div>
-                                        <div class="info-item">
+                                        <div class="info-item padd-15">
                                             <p>City : <span>Port Harcourt</span></p>
                                         </div>
-                                        <div class="info-item">
+                                        <div class="info-item padd-15">
                                             <p>Freelance : <span>Available</span></p>
                                         </div>
                                     </div>
+                                    <div class="row">
+                                        <div class="buttons">
+                                            <a href="#" class="btn padd-15">Download CV</a>
+                                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="skills padd-15">Skills</div>
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skill-item padd-15">
+                                            <h5>CSS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 70%;"></div>
+                                                <div class="skill-percent">70%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>JS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 80%;"></div>
+                                                <div class="skill-percent">80%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>REACT</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 50%;"></div>
+                                                <div class="skill-percent">50%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>HTML</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 90%;"></div>
+                                                <div class="skill-percent">90%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>UIUX</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 80%;"></div>
+                                                <div class="skill-percent">80%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
