--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+ <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,9 +47,9 @@
                     </div>
                 </div>
             </section>
-            <!-- Home Section Start -->
+            <!-- Home Section End -->
             <!-- About Section Start -->
-            <section class="about section">
+            <section class="about section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -139,11 +139,164 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="time-line shadow-dark">
+                                                <!-- timeline item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <div class="h4 timeline-title">Master in Computer Science</div>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident minima aperiam nesciunt hic deleniti, dicta quas natus repellendus voluptas suscipit corporis a, doloremque reiciendis blanditiis.</p>
+                                                </div>
+                                                <!-- timeline item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <div class="h4 timeline-title">Master in Computer Science</div>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident minima aperiam nesciunt hic deleniti, dicta quas natus repellendus voluptas suscipit corporis a, doloremque reiciendis blanditiis.</p>
+                                                </div>
+                                                <!-- timeline item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <div class="h4 timeline-title">Master in Computer Science</div>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident minima aperiam nesciunt hic deleniti, dicta quas natus repellendus voluptas suscipit corporis a, doloremque reiciendis blanditiis.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="time-line shadow-dark">
+                                                <!-- timeline item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <div class="h4 timeline-title">Master in Computer Science</div>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident minima aperiam nesciunt hic deleniti, dicta quas natus repellendus voluptas suscipit corporis a, doloremque reiciendis blanditiis.</p>
+                                                </div>
+                                                <!-- timeline item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <div class="h4 timeline-title">Master in Computer Science</div>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident minima aperiam nesciunt hic deleniti, dicta quas natus repellendus voluptas suscipit corporis a, doloremque reiciendis blanditiis.</p>
+                                                </div>
+                                                <!-- timeline item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <div class="h4 timeline-title">Master in Computer Science</div>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident minima aperiam nesciunt hic deleniti, dicta quas natus repellendus voluptas suscipit corporis a, doloremque reiciendis blanditiis.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <!-- Home Section End -->
+            <!-- About Section End -->
+            <!-- Services Section Start -->
+            <section class="service section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Services</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- Service items Start -->
+                         <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                            </div>
+                         </div>
+                        <!-- Service items End -->
+                         <!-- Service items Start -->
+                         <div class="service-item">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-laptop-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                            </div>
+                         </div>
+                        <!-- Service items End -->
+                         <!-- Service items Start -->
+                         <div class="service-item">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-palette"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                            </div>
+                         </div>
+                        <!-- Service items End -->
+                         <!-- Service items Start -->
+                         <div class="service-item">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                            </div>
+                         </div>
+                        <!-- Service items End -->
+                         <!-- Service items Start -->
+                         <div class="service-item">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                            </div>
+                         </div>
+                        <!-- Service items End -->
+                         <!-- Service items Start -->
+                         <div class="service-item">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-bullhorn"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                            </div>
+                         </div>
+                        <!-- Service items End -->
+                    </div>
+                </div>
+            </section>
+            <!-- Services Section End -->
          </div>
         <!-- Main Content End -->
      </div>
