--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </section>
             <!-- About Section End -->
             <!-- Services Section Start -->
-            <section class="service section">
+            <section class="service section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -239,7 +239,7 @@
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
-                         <div class="service-item">
+                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
@@ -250,7 +250,7 @@
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
-                         <div class="service-item">
+                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-palette"></i>
@@ -261,7 +261,7 @@
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
-                         <div class="service-item">
+                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-code"></i>
@@ -272,7 +272,7 @@
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
-                         <div class="service-item">
+                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-search"></i>
@@ -283,7 +283,7 @@
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
-                         <div class="service-item">
+                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
@@ -297,6 +297,17 @@
                 </div>
             </section>
             <!-- Services Section End -->
+            <!-- Portfolio Section Start -->
+             <section class="portfolio section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Portfolio</h2>
+                        </div>
+                    </div>
+                </div>
+             </section>
+            <!-- Portfolio Section End -->
          </div>
         <!-- Main Content End -->
      </div>
