--- a/index.html
+++ b/index.html
@@ -305,6 +305,22 @@
                             <h2>Portfolio</h2>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="portfolio-heading padd-15">
+                            <h2>My Latest Projects:</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- portfolio item start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- portfolio item end -->
+                    </div>
                 </div>
              </section>
             <!-- Portfolio Section End -->
