--- a/index.html
+++ b/index.html
@@ -227,72 +227,72 @@
                         </div>
                     </div>
                     <div class="row">
-                        <!-- Service items Start -->
-                         <div class="service-item padd-15">
+                        <!-- Service item Start -->
+                        <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                                <h4>Web Desisgn</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-                         </div>
-                        <!-- Service items End -->
-                         <!-- Service items Start -->
-                         <div class="service-item">
+                        </div>
+                        <!-- Service item End -->
+                         <!-- Service item Start -->
+                        <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                                <h4>Web Desisgn</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-                         </div>
-                        <!-- Service items End -->
-                         <!-- Service items Start -->
-                         <div class="service-item">
-                            <div class="service-item-inner">
-                                <div class="icon">
-                                    <i class="fa fa-palette"></i>
-                                </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
-                            </div>
-                         </div>
-                        <!-- Service items End -->
-                         <!-- Service items Start -->
-                         <div class="service-item">
+                        </div>
+                        <!-- Service item End -->
+                         <!-- Service item Start -->
+                        <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-code"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                                <h4>Web Desisgn</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-                         </div>
-                        <!-- Service items End -->
-                         <!-- Service items Start -->
-                         <div class="service-item">
+                        </div>
+                        <!-- Service item End -->
+                         <!-- Service item Start -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-palette"></i>
+                                </div>
+                                <h4>Web Desisgn</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
+                            </div>
+                        </div>
+                        <!-- Service item End -->
+                        <!-- Service item Start -->
+                        <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-search"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                                <h4>Web Desisgn</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-                         </div>
-                        <!-- Service items End -->
-                         <!-- Service items Start -->
-                         <div class="service-item">
+                        </div>
+                        <!-- Service item End -->
+                        <!-- Service item Start -->
+                        <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos quis eaque.</p>
+                                <h4>Web Desisgn</h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-                         </div>
-                        <!-- Service items End -->
+                        </div>
+                        <!-- Service item End -->
                     </div>
                 </div>
             </section>
