--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Main Content Start -->
          <div class="main-content">
             <!-- Home Section Start -->
-            <section class="home section hidden">
+            <section class="home section">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -49,7 +49,7 @@
             </section>
             <!-- Home Section End -->
             <!-- About Section Start -->
-            <section class="about section hidden">
+            <section class="about section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -219,7 +219,7 @@
             </section>
             <!-- About Section End -->
             <!-- Services Section Start -->
-            <section class="service section hidden">
+            <section class="service section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -236,17 +236,10 @@
                                 <h4>Web Desisgn</h4>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-<<<<<<< HEAD
-                        </div>
-                        <!-- Service item End -->
-                         <!-- Service item Start -->
-                        <div class="service-item padd-15">
-=======
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
                          <div class="service-item padd-15">
->>>>>>> b89232a08d6938e1279b7f46b046baa9db60e6a7
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
@@ -254,12 +247,6 @@
                                 <h4>Web Desisgn</h4>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-<<<<<<< HEAD
-                        </div>
-                        <!-- Service item End -->
-                         <!-- Service item Start -->
-                        <div class="service-item padd-15">
-=======
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
@@ -275,7 +262,6 @@
                         <!-- Service items End -->
                          <!-- Service items Start -->
                          <div class="service-item padd-15">
->>>>>>> b89232a08d6938e1279b7f46b046baa9db60e6a7
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-code"></i>
@@ -283,28 +269,10 @@
                                 <h4>Web Desisgn</h4>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-<<<<<<< HEAD
-                        </div>
-                        <!-- Service item End -->
-                         <!-- Service item Start -->
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
-                                <div class="icon">
-                                    <i class="fa fa-palette"></i>
-                                </div>
-                                <h4>Web Desisgn</h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
-                            </div>
-                        </div>
-                        <!-- Service item End -->
-                        <!-- Service item Start -->
-                        <div class="service-item padd-15">
-=======
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
                          <div class="service-item padd-15">
->>>>>>> b89232a08d6938e1279b7f46b046baa9db60e6a7
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-search"></i>
@@ -312,17 +280,10 @@
                                 <h4>Web Desisgn</h4>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore magni officiis quisquam.</p>
                             </div>
-<<<<<<< HEAD
-                        </div>
-                        <!-- Service item End -->
-                        <!-- Service item Start -->
-                        <div class="service-item padd-15">
-=======
                          </div>
                         <!-- Service items End -->
                          <!-- Service items Start -->
                          <div class="service-item padd-15">
->>>>>>> b89232a08d6938e1279b7f46b046baa9db60e6a7
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
